--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "system",
+    "module": "es2015",
     "sourceMap": true,
     "declaration": true,
-    "outFile": "build/index.js"
+    "outDir": "build/"
   }
 }
